add cmake files + avrdude script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,14 +19,14 @@ cmake_minimum_required(VERSION 2.8)
 ##################################################################################
 # tools to be used for programming the AVR
 ##################################################################################
-set(AVR_UPLOADTOOL avrdude)
-set(AVR_PROGRAMMER usbasp)
-set(AVR_UPLOADTOOL_PORT usb)
+#set(AVR_UPLOADTOOL avrdude)
+#set(AVR_PROGRAMMER usbasp)
+#set(AVR_UPLOADTOOL_PORT usb)
 
 #### For Arduino bootloader:
-#set(AVR_PROGRAMMER arduino)
-#set(AVR_UPLOADTOOL_PORT /dev/tty.wchusbserial1420)
-#set(AVR_UPLOADTOOL_BITRATE 57600)
+set(AVR_PROGRAMMER arduino)
+set(AVR_UPLOADTOOL_PORT /dev/ttyUSB0)
+set(AVR_UPLOADTOOL_BITRATE 57600)
 
 
 # AVR and fuses needs to be set
@@ -46,7 +46,7 @@ INCLUDE(generic-gcc-avr.cmake)
 ##########################################################################
 # name your project
 ##########################################################################
-project()
+project("code")
 
 ##################################################################################
 # add all sources and headers from ./src
